// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Home> on load renders correctly  1`] = `
<DocumentFragment>
  <div>
    <h1>
      Welcome to Offer Decisioning Engine Previewer!
    </h1>
    <div
      aria-label="Getting Containers"
      aria-valuemax="100"
      aria-valuemin="0"
      class="_spectrum-CircleLoader_40b43 _spectrum-CircleLoader--indeterminate_40b43"
      id="home-page-progress-circle"
      role="progressbar"
    >
      <div
        class="_spectrum-CircleLoader-track_40b43"
      />
      <div
        class="_spectrum-CircleLoader-fills_40b43"
      >
        <div
          class="_spectrum-CircleLoader-fillMask1_40b43"
        >
          <div
            class="_spectrum-CircleLoader-fillSubMask1_40b43"
          >
            <div
              class="_spectrum-CircleLoader-fill_40b43"
            />
          </div>
        </div>
        <div
          class="_spectrum-CircleLoader-fillMask2_40b43"
        >
          <div
            class="_spectrum-CircleLoader-fillSubMask2_40b43"
          >
            <div
              class="_spectrum-CircleLoader-fill_40b43"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Home> on sandbox selection renders correctly 1`] = `
<DocumentFragment>
  <div>
    <h1>
      Welcome to Offer Decisioning Engine Previewer!
    </h1>
    <div
      aria-label="Getting Containers"
      aria-valuemax="100"
      aria-valuemin="0"
      class="_spectrum-CircleLoader_40b43 _spectrum-CircleLoader--indeterminate_40b43"
      hidden=""
      id="home-page-progress-circle"
      role="progressbar"
      style="display: none;"
    >
      <div
        class="_spectrum-CircleLoader-track_40b43"
      />
      <div
        class="_spectrum-CircleLoader-fills_40b43"
      >
        <div
          class="_spectrum-CircleLoader-fillMask1_40b43"
        >
          <div
            class="_spectrum-CircleLoader-fillSubMask1_40b43"
          >
            <div
              class="_spectrum-CircleLoader-fill_40b43"
            />
          </div>
        </div>
        <div
          class="_spectrum-CircleLoader-fillMask2_40b43"
        >
          <div
            class="_spectrum-CircleLoader-fillSubMask2_40b43"
          >
            <div
              class="_spectrum-CircleLoader-fill_40b43"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
